# docstring-to-markdown

./: README.md  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  publish.yml  python-package.yml  tests.yml
docstring_to_markdown/: __init__.py  _utils.py  cpython.py  google.py  plain.py  rst.py  types.py
tests/: test_convert.py  test_cpython.py  test_google.py  test_plain.py  test_rst.py
