[metadata]
name = docstring-to-markdown
description = On the fly conversion of Python docstrings to markdown
long_description = file: ./README.md
long_description_content_type = text/markdown
author = Michał Krassowski
author_email = krassowski.michal+pypi@gmail.com
license =  LGPL-2.1
keywords =
    Docstring
    conversion
    markdown
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python
project_urls =
    Bug Tracker = https://github.com/krassowski/docstring-to-markdown/issues
    Source Code = https://github.com/krassowski/docstring-to-markdown

[options]
packages = find:
python_requires = >=3.6

[tool:pytest]
addopts =
    --pyargs tests
    --cov docstring_to_markdown
    --cov-fail-under=92
    --cov-report term-missing:skip-covered
    -p no:warnings
    --flake8
    -vv

[flake8]
max-line-length = 120
max-complexity = 15
