[metadata]
name = docstring-to-markdown
description = On the fly conversion of Python docstrings to markdown
long_description = file: ./README.md
long_description_content_type = text/markdown
author = Michał Krassowski
author_email = krassowski.michal+pypi@gmail.com
license =  LGPL-2.1-or-later
keywords =
    Docstring
    conversion
    markdown
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python
    Topic :: Text Processing :: Markup
    Topic :: Documentation :: Sphinx
project_urls =
    Bug Tracker = https://github.com/python-lsp/docstring-to-markdown/issues
    Source Code = https://github.com/python-lsp/docstring-to-markdown
version = attr: docstring_to_markdown.__version__

[mypy]
warn_return_any = True
warn_unused_configs = True

[options]
packages = find:
python_requires = >=3.6

[options.package_data]
docstring-to-markdown = py.typed

[tool:pytest]
addopts =
    --pyargs tests
    --cov docstring_to_markdown
    --cov-fail-under=99
    --cov-report term-missing:skip-covered
    -p no:warnings
    --flake8
    -vv

[flake8]
max-line-length = 120
max-complexity = 15
